<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    tools:context=".SetReminderActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_name"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/title_card_birth_control_name"/>

                    <TextView
                        android:visibility="gone"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/hint_card_medication_name"
                        android:id="@+id/help_name" />

                    <EditText
                        android:id="@+id/medic_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences|text"
                        android:imeOptions="actionDone"
                        android:maxLength="255" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_type"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/title_card_birth_control_type"/>

                    <TextView
                        android:visibility="gone"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/hint_card_medication_name"
                        android:id="@+id/help_type" />

                    <Spinner
                        android:id="@+id/spinner_pill_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/birth_control_cycles"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/take_placebo_pills_on_break_days"
                        android:id="@+id/placebo_checkBox" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/card_reminder"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/title_card_remind" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/help_reminder"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp" />

                    <TimePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/timePicker"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_schedule"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/text_start_date" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/help_schedule"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/date"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/set_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/set_reminder"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>